--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,23 @@ h2 {
   background-color: #901CAD;
   margin-top: -32px;
 }
+
+.page-enter {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.page-enter-active{
+  opacity: 1;
+  transform: translateX(0%);
+  transition: 300ms ease-out;
+}
+
+.page-exit{
+  opacity: 1;
+}
+
+.page-exit-active {
+  opacity: 0;
+  transition: 300ms ease-in;
+}
