--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,32 @@
+/*
+green: rgb(54, 69, 59)
+orange: rgb(232, 152, 94)
+dull green: rgb(81, 87, 81)
+ivory: rgb(245, 249, 233)
+sage: rgb(194, 193, 165)
+
+*/
+
+
+
 body {
   font-family: "Open Sans", sans-serif;
+  background-color: rgb(245, 249, 233);
 }
 
-h1, h2, h3, .card-body>.card-title {
-  font-family: "Lobster", cursive;
-}
+/* h1, h2, h3, .card-body>.card-title {
+  font-family: "";
+} */
 
 .card-title {
   font-weight: 500;
   font-size: 1.25rem;
 }
 
+
+
 h2 {
-  color: #3046C5;
+  color: #ffffff;
 }
 
 .card-img-overlay .card-title {
@@ -27,23 +41,27 @@ h2 {
 }
 
 .site-footer {
-  background-image: linear-gradient(#CEC8FF, white);
+  background-color: rgb(54, 69, 59);
   padding: 20px 0;
 }
 
 .jumbotron {
-  margin: 0;
+  margin-bottom: 0px;
   padding: 30px;
-  background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+  background-image: url('/public/assets/images/campgroundBackground.jpeg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   color: white;
+  height: 60vh;
 }
 
 .jumbotron h2 {
-  color: #CEC8FF;
+  color: rgb(255, 255, 255);
 }
 
 .navbar-dark {
-  background-color: #901CAD;
+  background-color: rgb(54, 69, 59);
   margin-top: -32px;
 }
 
@@ -65,4 +83,17 @@ h2 {
 .page-exit-active {
   opacity: 0;
   transition: 300ms ease-in;
+}
+
+.home-breadcrumb{
+  color: rgb(232, 152, 94);
+}
+
+.home-breadcrumb:hover{
+  color: rgb(232, 152, 94);
+}
+
+.login-btn{
+  color:rgb(232, 152, 94) !important;
+  border-color: rgb(232, 152, 94) !important;
 }
